[tool.poetry]
name = "cosc140-hw2-ahmed_hw2"
version = "0.1.0"
description = ""
authors = ["Ahmed Kamran <akamran@colgate.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
